--- a/index.html
+++ b/index.html
@@ -8,22 +8,33 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
-    
+
+<!-- CONTAINER -->
 <section id="container">
+
+    <!-- HEADER -->
     <header>
-        <h1>Przykładowa strona</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero incidunt tenetur impedit voluptate architecto. Accusantium alias unde accusamus, voluptatum fuga sunt, voluptate dolor soluta dolores saepe atque modi aut aliquam!</p>
     </header>
 
-    
+    <!-- MAIN -->
     <main>
-        <h1>Test</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam officia, ipsum voluptatem aliquam beatae consectetur non laborum animi, harum soluta suscipit quaerat maiores distinctio unde assumenda sint voluptas alias labore.</p>
+        <div class="card">
+            <span class="card_number"></span>
+        </div>
+        <div class="card">
+            <span class="card_number"></span>
+        </div>
+        <div class="card">
+            <span class="card_number"></span>
+        </div>
     </main>
 
-    <aside><h1>test</h1>TEst aaa</aside>
+    <!-- ASIDE -->
+    <aside></aside>
+
 </section>
 
+    <!-- FOOTER -->
     <footer></footer>
 
 </body>
