--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <div class="card">
             <span class="card_number"></span>
         </div>
+        <div class="card">
+            <span class="card_number"></span>
+        </div>
     </main>
 
     <!-- ASIDE -->
