dodanie 5-go elementu

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         <div class="card">
             <span class="card_number"></span>
         </div>
+        <div class="card">
+                <span class="card_number"></span>
+        </div>
     </main>
 
     <!-- ASIDE -->
